# stl_voro_fill

./: LICENSE  ls_1lR.txt  readme.md
examples/: bunny.stl
sw/: INSTALL.sh  build_cfg.ini  make.sh  readme.md  readme.txt  sourceMe.sh
sw/data/: pack-cube  pack_cylinder
sw/scripts/: RunMe_MakeSTL.py  _script_counter.sh  clean_build_dir.sh  convert_pointInside_2_pc.new.sh  copy_current_scripts_here.sh  fix_stl.sh  fpget_csv_column.rb  fullpath.sh  is_linux.sh  mac_popup.sh  make_cube_this_big.sh  make_vtk_app.sh  minmax.pl  minmax_col.sh  place_pack_cube_at_xyz.py  plot_histo.py  plot_vtk.sh  python_helpers.py  readme.txt  readset_inicfg.py  run_voro_fill_stl.sh  stl_align.py  stl_volume.py  trim_pack_cylinder.py  viz_packing.sh  xlate_pack_cylinder.py
sw/vtk_scripts/: clean_all.sh  make_all.sh  readme.txt
sw/vtk_scripts/9pt_csv_viewer/: 9pt_csv_viewer.cxx  CMakeLists.txt  make.sh  readme.txt
sw/vtk_scripts/TubesFromSplines/: CMakeLists.txt  TubesFromSplines.cxx  make.sh  readme.txt
sw/vtk_scripts/ViewSTL/: CMakeLists.txt  ViewSTL.cxx  make.sh  readme.txt
sw/vtk_scripts/append_stl/: CMakeLists.txt  append_stl.cc  make.sh  readme.txt
sw/vtk_scripts/clean_stl/: CMakeLists.txt  clean_stl.cxx  make.sh
sw/vtk_scripts/common/: version.h  vtk_common.h
sw/vtk_scripts/convert_to_stl/: CMakeLists.txt  convert_to_stl.cxx  make.sh
sw/vtk_scripts/make_stl_solid/: CMakeLists.txt  make.sh  make_stl_solid.cxx
sw/vtk_scripts/stl_info/: CMakeLists.txt  make.sh  stl_info.cxx
sw/vtk_scripts/stl_remesh/: CMakeLists.txt  make.sh  readme.txt  stl_remesh.cxx
sw/vtk_scripts/stl_rotate/: CMakeLists.txt  make.sh  stl_rotate.cxx
sw/vtk_scripts/translate_stl/: CMakeLists.txt  make.sh  readme.txt  translate_stl.cxx
sw/vtk_scripts/voro_fill_stl/: CMakeLists.txt  make.sh  voro_fill_stl.cc
